@@ -6,6 +6,8 @@ cod-tools (unreleased)
       - the '--record-original-order', '--order-child-loops' options;
       - support for ordering according to values of '_atom_type_*' CIF
         loop.
+    - COD::CIF::Data::CODFlags:
+      - the has_attached_hydrogens() subroutine.
     - COD::ToolsVersion:
       - the get_version_number() and get_version_string() subroutines.
   * Changed:
